--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- for mobile device -->
             <ul class="navbar-nav mr-auto d-block d-md-none" id="navbarTextFormobile">
                 <li class="navbar-brand">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Brand <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
 
@@ -39,12 +39,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="navbar-brand active d-none d-sm-block" id="navbarWhileMobile">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#">Brand <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
 
                     <ul class="navbar-nav m-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             middle
                         </li>
                     </ul>
